# machine-learning-practice

./: 1.3 numpy.ipynb  1.4 pandas.ipynb  2.2 iris.ipynb  2.3 sklearn internal data.ipynb  2.4 model selection module.ipynb  2.5 data encoding.ipynb  2.6 titanic survivor predicate.ipynb  3.1 metrics.ipynb  3.6 pima diabetes.ipynb  4.10 credit card fraud.ipynb  4.11 stacking ensemble.ipynb  4.12 feature selection.ipynb  4.2 decision tree.ipynb  4.3 ensemble.ipynb  4.4 random forest.ipynb  4.5 gradient boosting machine.ipynb  4.6 extra gradient boost.ipynb  4.7 light gbm.ipynb  4.8 hyperopt.ipynb  4.9 santander satisfaction.ipynb  5.3  gradient descent.ipynb  5.7 logistic regression.ipynb  5.9 bike sharing.ipynb  pyproject.toml
